Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1113,10 +1113,6 @@ section {
         display: none !important;
     }
 
-    main {
-        break-after: auto;
-    }
-
     main > section {
         break-before: page;
     }
